--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         </div>
         <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%] relative">
             <span
-                class="h-[5%] w-fit px-3 text-white rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New
+                class="h-[5%] w-fit px-3 text-[#BBBDBD] rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New
                 UI Design</span>
             <span
-                class="h-[5%] w-fit px-3 text-white rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh] -translate-x-[0.5vw]">Crafted
+                class="h-[5%] w-fit px-3 text-[#BBBDBD] rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh] -translate-x-[0.5vw]">Crafted
                 By Chirag</span>
             <div class="RIGHT_IMAGE bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
             </div>
@@ -72,49 +72,49 @@
         <div class="w-full h-[5.2%] flex items-center gap-[0.5%] px-[3%]"><span
                 class="w-[4vh] h-[4vh] bg-[#FFFFFF] rounded-full"></span><span
                 class="w-[4vh] h-[4vh] bg-[#B9E901] rounded-full"></span>
-            <p class="ml-[1%] text-white text-lg">Our Services</p>
+            <p class="ml-[1%] text-[#BBBDBD] text-lg">Our Services</p>
         </div>
         <!-- Text Containing Div-->
-        <div class="mt-[2%] px-[3%] border-2 border-black">text-white
-            <p class="text-white text-7xl">Find out more about</p>
-            <p class="text-white text-7xl">our EcoBrands</p>
-            <p class="mt-[1.5%] text-white text-base">Whether you need a full Eco Brand team or specialized conclusion,
+        <div class="mt-[2%] px-[3%] border-2 border-black">
+            <p class="text-[#BBBDBD] text-7xl">Find out more about</p>
+            <p class="text-[#BBBDBD] text-7xl">our EcoBrands</p>
+            <p class="mt-[1.5%] text-[#BBBDBD] text-base">Whether you need a full Eco Brand team or specialized conclusion,
                 Integris can help</p>
         </div>
         <!-- Covering Effect div -->
         <div class="h-[30%] px-[3%] mt-[2%] border-2 border-black">
             <div
                 class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
-                <p class="w-[15%] text-white text-4xl">01</p>
-                <p class="w-[60%] text-white text-4xl">Market Research</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                <p class="w-[15%] text-[#BBBDBD] text-4xl">01</p>
+                <p class="w-[60%] text-[#BBBDBD] text-4xl">Market Research</p>
+                <div class="h-[7vh] w-[7vh] bg-[#D7DBDB] rounded-full flex justify-center items-center"><i
                         class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
             <div
                 class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
-                <p class="text-white w-[15%] text-4xl">02</p>
-                <p class="text-white w-[60%] text-4xl">Ads Production</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                <p class="text-[#BBBDBD] w-[15%] text-4xl">02</p>
+                <p class="text-[#BBBDBD] w-[60%] text-4xl">Ads Production</p>
+                <div class="h-[7vh] w-[7vh] bg-[#D7DBDB] rounded-full flex justify-center items-center"><i
                         class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
             <div
                 class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
-                <p class="text-white w-[15%] text-4xl">03</p>
-                <p class="text-white w-[60%] text-4xl">Branding Strategies</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                <p class="text-[#BBBDBD] w-[15%] text-4xl">03</p>
+                <p class="text-[#BBBDBD] w-[60%] text-4xl">Branding Strategies</p>
+                <div class="h-[7vh] w-[7vh] bg-[#D7DBDB] rounded-full flex justify-center items-center"><i
                         class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
             <div
                 class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
-                <p class="text-white w-[15%] text-4xl">04</p>
-                <p class="text-white w-[60%] text-4xl">Managed Cloud</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                <p class="text-[#BBBDBD] w-[15%] text-4xl">04</p>
+                <p class="text-[#BBBDBD] w-[60%] text-4xl">Managed Cloud</p>
+                <div class="h-[7vh] w-[7vh] bg-[#D7DBDB] rounded-full flex justify-center items-center"><i
                         class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
@@ -141,7 +141,7 @@
         </div>
     </div>
     <!-- Marquee -->
-    <div class="overflow-hidden" >
+    <div class="overflow-hidden">
         <div class="h-[15vh] w-[200vw] bg-black flex">
             <div class="MarqueeContainer h-full w-[100vw] flex items-center border-yellow-900">
                 <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
@@ -163,6 +163,24 @@
                 <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
                 <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
             </div>
+        </div>
+    </div>
+    <!-- About Us -->
+    <div class="h-[55vh] w-full px-[3%] bg-black flex gap-[1%]">
+        <div class="h-full w-[35%] px-[5%] py-[5%] text-lg">
+            <p class="text-[#BBBDBD]">we create webpages by todays standards</p>
+        </div>
+        <div class="h-full w-[65%] py-[5%] flex flex-col gap-[5%]">
+            <p class="text-lg text-[#BBBDBD]">Creating webpages by today's standards involves prioritizing responsiveness, accessibility, and
+                performance. This ensures optimal user experience across various devices and screen sizes. Modern web
+                development relies on technologies like HTML5, CSS3, and JavaScript frameworks.</p>
+            <p class="text-lg text-[#BBBDBD]">With responsive design techniques, content seamlessly adapts to different viewport sizes. By employing
+                these practices, developers craft engaging and user-friendly websites for today's digital landscape.</p>
+            <p class="text-lg text-[#BBBDBD]">Utilizing a diverse range of technologies and frameworks, front-end development focuses on crafting
+                engaging user interfaces. Back-end technologies handle server-side logic and data management, ensuring
+                smooth functionality. By embracing these modern approaches, developers create webpages that meet current
+                standards.</p>
+                <p class="justify-self-end text-[#BBBDBD] underline decoration-1">SHOW MORE</p>
         </div>
     </div>
     <!-- Footer -->
@@ -191,16 +209,21 @@
             </div>
         </div>
         <div class="LOWER h-[25%] w-full flex justify-center items-center gap-[0.5%]">
-            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-facebook-fill text-[#D5EDED] text-lg"></i></span>
-            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-twitter-fill text-[#D5EDED] text-lg"></i></span>
-            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-google-fill text-[#D5EDED] text-lg"></i></span>
-            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-discord-fill text-[#D5EDED] text-lg"></i></span>
-            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-linkedin-box-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i
+                    class="ri-facebook-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i
+                    class="ri-twitter-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i
+                    class="ri-google-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i
+                    class="ri-discord-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i
+                    class="ri-linkedin-box-fill text-[#D5EDED] text-lg"></i></span>
         </div>
         <p class="BOTTOM h-[15%] w-full flex justify-center text-[#BED1D1]">@Copyright. All rights reserved</p>
     </footer>
     <!-- Scripts -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
