Changing the Fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="Favicon/android-chrome-512x512.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -78,7 +81,8 @@
         <div class="mt-[2%] px-[3%] border-2 border-black">
             <p class="text-[#BBBDBD] text-7xl">Find out more about</p>
             <p class="text-[#BBBDBD] text-7xl">our EcoBrands</p>
-            <p class="mt-[1.5%] text-[#BBBDBD] text-base">Whether you need a full Eco Brand team or specialized conclusion,
+            <p class="mt-[1.5%] text-[#BBBDBD] text-base">Whether you need a full Eco Brand team or specialized
+                conclusion,
                 Integris can help</p>
         </div>
         <!-- Covering Effect div -->
@@ -171,16 +175,19 @@
             <p class="text-[#BBBDBD]">we create webpages by todays standards</p>
         </div>
         <div class="h-full w-[65%] py-[5%] flex flex-col gap-[5%]">
-            <p class="text-lg text-[#BBBDBD]">Creating webpages by today's standards involves prioritizing responsiveness, accessibility, and
+            <p class="text-lg text-[#BBBDBD]">Creating webpages by today's standards involves prioritizing
+                responsiveness, accessibility, and
                 performance. This ensures optimal user experience across various devices and screen sizes. Modern web
                 development relies on technologies like HTML5, CSS3, and JavaScript frameworks.</p>
-            <p class="text-lg text-[#BBBDBD]">With responsive design techniques, content seamlessly adapts to different viewport sizes. By employing
+            <p class="text-lg text-[#BBBDBD]">With responsive design techniques, content seamlessly adapts to different
+                viewport sizes. By employing
                 these practices, developers craft engaging and user-friendly websites for today's digital landscape.</p>
-            <p class="text-lg text-[#BBBDBD]">Utilizing a diverse range of technologies and frameworks, front-end development focuses on crafting
+            <p class="text-lg text-[#BBBDBD]">Utilizing a diverse range of technologies and frameworks, front-end
+                development focuses on crafting
                 engaging user interfaces. Back-end technologies handle server-side logic and data management, ensuring
                 smooth functionality. By embracing these modern approaches, developers create webpages that meet current
                 standards.</p>
-                <p class="justify-self-end text-[#BBBDBD] underline decoration-1">SHOW MORE</p>
+            <p class="justify-self-end text-[#BBBDBD] underline decoration-1">SHOW MORE</p>
         </div>
     </div>
     <!-- Footer -->
