Changed the Profile pic at Page1

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="h-[32%] w-full">
                 <div class="UPPER h-[40%] w-full flex items-center">
                     <div
-                        class="PROFILE_CONTAINER h-[10vh] w-[10vh] rounded-full border-2 border-[#B9E901] overflow-hidden">
-                        <img class="h-full w-full objcet-cover" src="Assets/profile.jpg" alt="">
+                        class="PROFILE_CONTAINER h-[10vh] w-[10vh] rounded-full border border-[#B9E901] overflow-hidden">
+                        <img class="h-full w-full objcet-cover" src="Assets/profile_pic.png" alt="">
                     </div>
                 </div>
                 <div class="LOWER h-[60%] w-full py-1">
